added failure section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,31 @@
         </div>
     </header>
     <main>
-
+        <div class="failures-of-previous-section">
+            <div class="img-column">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="content-column">
+                <h1 class="column-title">
+                    My failures of <br> previous year
+                </h1>
+                <div class="description">
+                    <p class="column-description">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                </div>
+                
+                <div class="column-list">
+                    <ul>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
