--- a/index.html
+++ b/index.html
@@ -58,8 +58,65 @@
                 </div>
             </div>
         </div>
+        <!-- failure section end -->
+        <!-- plan section starts -->
+
+        <section class="plan">
+            <h1 class="plan-title">My Plans</h1>
+            <div class="plans-item">
+                <div class="item">
+                    <img src="images/icons/web.png" alt="" class="icon">
+                    <h4 class="head">Web Development</h4>
+                    <p class="descri">I want to start</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/js.png" alt="" class="icon">
+                    <h4 class="head">Javascript</h4>
+                    <p class="descri">I want to learn</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/smoke.png" alt="" class="icon">
+                    <h4 class="head">Smoking Habit</h4>
+                    <p class="descri">I want to end</p>
+                </div>
+                <div class="item">
+                    <img src="images/icons/ecom.png" alt="" class="icon">
+                    <h4 class="head">Ecommerce</h4>
+                    <p class="descri">I want to develop</p>
+                </div>
+            </div>
+            
+        </section>
+        <!-- plan section ends-->
+        <!-- picture section starts -->
+        <div class="picture">
+            <img src="images/watch.png" alt="">
+        </div>
     </main>
     <footer>
+        
+            <div class="footer-div">
+            <div class="future-column">
+                <h1 class="future-title">Future</h1>
+                <p class="future-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="future-mail">Email : info@gmail.com</p>
+                <p class="future-phone">Phone : 01500 00 00 00</p>
+                <div class="social">
+                    <img src="images/icons/fb.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
+                </div>
+            </div>
+            <div class="subscribe-column">
+                <h3 class="subscribe-title">Subscribe</h3>
+                <form action="">
+                    <label for="">
+                        <input type="email" name="" id="" placeholder="Enter Your Email" >
+                    </label>
+                    <button class="subscribe-btn">Subscribe</button>
+                </form>
+            </div>
+        </div>
 
     </footer>
 </body>
